rs/sol-client-gen/tests/snapshots/generator__generates_constructor_helpers_from_payable_snapshot_contract.snap
---
source: rs/sol-client-gen/tests/generator.rs
expression: "ClientGenerator::from_sol(&sol).with_contract_name(\"PayableContractCaller\").generate().expect(\"generate client for payable contract with constructor\")"
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
use sails_rs::{
    ActorId,
    client::{GearEnv, PendingCall, PendingCtor},
};

#[derive(Debug, Clone)]
pub struct PayableContractCallerClient<E: GearEnv> {
    env: E,
    program_id: ActorId,
}

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub fn new(env: E, program_id: ActorId) -> Self {
        Self { env, program_id }
    }

    pub fn with_program_id(mut self, program_id: ActorId) -> Self {
        self.program_id = program_id;
        self
    }

    pub fn program_id(&self) -> ActorId {
        self.program_id
    }

    pub fn env(&self) -> &E {
        &self.env
    }
}
sails_rs::io_struct_sol_impl!(Constructor, u16::MAX, {
    type Params = (sails_rs::ActorId,);
    type AbiParams = (sails_rs::ActorId,);
    into_abi_params = |value| {
        let abi_value: (sails_rs::ActorId,) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = constructor;
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub fn constructor(
        &self,
        code_id: sails_rs::CodeId,
        salt: impl AsRef<[u8]>,
        vara_eth_program: sails_rs::ActorId,
    ) -> PendingCtor<(), Constructor, E> {
        PendingCtor::new(
            self.env.clone(),
            code_id,
            salt.as_ref().to_vec(),
            (vara_eth_program,),
        )
    }
}
sails_rs::io_struct_sol_impl!(OnlyVaraEthProgram, 0, {
    type Params = ();
    type AbiParams = ();
    into_abi_params = |value| {
        let abi_value: () = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("_onlyVaraEthProgram()");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const _ONLY_VARA_ETH_PROGRAM_SIGNATURE: &'static str = "_onlyVaraEthProgram()";

    pub fn _only_vara_eth_program(&self) -> PendingCall<OnlyVaraEthProgram, E> {
        PendingCall::<OnlyVaraEthProgram, E>::new(self.env.clone(), self.program_id, 0, ())
    }
}
sails_rs::io_struct_sol_impl!(ReplyOnCreate, 1, {
    type Params = ([u8; 32],);
    type AbiParams = ([u8; 32],);
    into_abi_params = |value| {
        let abi_value: ([u8; 32],) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("replyOn_create(bytes32)");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const REPLY_ON_CREATE_SIGNATURE: &'static str = "replyOn_create(bytes32)";

    pub fn reply_on_create(&self, message_id: [u8; 32]) -> PendingCall<ReplyOnCreate, E> {
        PendingCall::<ReplyOnCreate, E>::new(self.env.clone(), self.program_id, 0, (message_id,))
    }
}
sails_rs::io_struct_sol_impl!(ReplyOnMyServiceDeposit, 2, {
    type Params = ([u8; 32],);
    type AbiParams = ([u8; 32],);
    into_abi_params = |value| {
        let abi_value: ([u8; 32],) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("replyOn_myServiceDeposit(bytes32)");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const REPLY_ON_MY_SERVICE_DEPOSIT_SIGNATURE: &'static str =
        "replyOn_myServiceDeposit(bytes32)";

    pub fn reply_on_my_service_deposit(
        &self,
        message_id: [u8; 32],
    ) -> PendingCall<ReplyOnMyServiceDeposit, E> {
        PendingCall::<ReplyOnMyServiceDeposit, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            (message_id,),
        )
    }
}
sails_rs::io_struct_sol_impl!(ReplyOnMyServiceRegularCall, 3, {
    type Params = ([u8; 32], bool);
    type AbiParams = ([u8; 32], bool);
    into_abi_params = |value| {
        let abi_value: ([u8; 32], bool) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("replyOn_myServiceRegularCall(bytes32,bool)");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const REPLY_ON_MY_SERVICE_REGULAR_CALL_SIGNATURE: &'static str =
        "replyOn_myServiceRegularCall(bytes32,bool)";

    pub fn reply_on_my_service_regular_call(
        &self,
        message_id: [u8; 32],
        reply: bool,
    ) -> PendingCall<ReplyOnMyServiceRegularCall, E> {
        PendingCall::<ReplyOnMyServiceRegularCall, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            (message_id, reply),
        )
    }
}
sails_rs::io_struct_sol_impl!(ReplyOnMyServiceSwapAndRefund, 4, {
    type Params = ([u8; 32], u128);
    type AbiParams = ([u8; 32], u128);
    into_abi_params = |value| {
        let abi_value: ([u8; 32], u128) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("replyOn_myServiceSwapAndRefund(bytes32,uint128)");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const REPLY_ON_MY_SERVICE_SWAP_AND_REFUND_SIGNATURE: &'static str =
        "replyOn_myServiceSwapAndRefund(bytes32,uint128)";

    pub fn reply_on_my_service_swap_and_refund(
        &self,
        message_id: [u8; 32],
        reply: u128,
    ) -> PendingCall<ReplyOnMyServiceSwapAndRefund, E> {
        PendingCall::<ReplyOnMyServiceSwapAndRefund, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            (message_id, reply),
        )
    }
}
sails_rs::io_struct_sol_impl!(ReplyOnMyServiceWithdraw, 5, {
    type Params = ([u8; 32], u128);
    type AbiParams = ([u8; 32], u128);
    into_abi_params = |value| {
        let abi_value: ([u8; 32], u128) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("replyOn_myServiceWithdraw(bytes32,uint128)");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const REPLY_ON_MY_SERVICE_WITHDRAW_SIGNATURE: &'static str =
        "replyOn_myServiceWithdraw(bytes32,uint128)";

    pub fn reply_on_my_service_withdraw(
        &self,
        message_id: [u8; 32],
        reply: u128,
    ) -> PendingCall<ReplyOnMyServiceWithdraw, E> {
        PendingCall::<ReplyOnMyServiceWithdraw, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            (message_id, reply),
        )
    }
}
sails_rs::io_struct_sol_impl!(OnErrorReply, 6, {
    type Params = ([u8; 32], sails_rs::prelude::Vec<u8>, [u8; 4]);
    type AbiParams = ([u8; 32], sails_rs::prelude::Vec<u8>, [u8; 4]);
    into_abi_params = |value| {
        let abi_value: ([u8; 32], sails_rs::prelude::Vec<u8>, [u8; 4]) = value.clone();
        abi_value
    };
    type Reply = ();
    type AbiReply = ();
    from_abi_reply = |value| value;
    call = selector("onErrorReply(bytes32,bytes,bytes4)");
    reply = unit;
});

impl<E: GearEnv> PayableContractCallerClient<E> {
    pub const ON_ERROR_REPLY_SIGNATURE: &'static str = "onErrorReply(bytes32,bytes,bytes4)";

    pub fn on_error_reply(
        &self,
        message_id: [u8; 32],
        payload: sails_rs::prelude::Vec<u8>,
        reply_code: [u8; 4],
    ) -> PendingCall<OnErrorReply, E> {
        PendingCall::<OnErrorReply, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            (message_id, payload, reply_code),
        )
    }
}
