rs/sol-client-gen/tests/snapshots/generator__generates_constructor_helpers_from_snapshot_contract.snap
---
source: rs/sol-client-gen/tests/generator.rs
expression: "ClientGenerator::from_sol(&sol).with_contract_name(\"TestContractCaller\").generate().expect(\"generate client for contract with constructor\")"
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
use sails_rs::{
    ActorId,
    client::{GearEnv, Identifiable, MethodMeta, PendingCall, PendingCtor, ServiceCall},
    solidity,
};

#[derive(Debug, Clone)]
pub struct TestContractCallerClient<E: GearEnv> {
    env: E,
    program_id: ActorId,
}

impl<E: GearEnv> TestContractCallerClient<E> {
    pub fn new(env: E, program_id: ActorId) -> Self {
        Self { env, program_id }
    }

    pub fn with_program_id(mut self, program_id: ActorId) -> Self {
        self.program_id = program_id;
        self
    }

    pub fn program_id(&self) -> ActorId {
        self.program_id
    }

    pub fn env(&self) -> &E {
        &self.env
    }
}
pub struct Constructor;

impl Identifiable for Constructor {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for Constructor {
    const ENTRY_ID: u16 = u16::MAX;
}

impl ServiceCall for Constructor {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = ();

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        value.clone()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        _payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(())
    }
}

impl<E: GearEnv> TestContractCallerClient<E> {
    pub fn constructor(
        &self,
        code_id: sails_rs::CodeId,
        salt: impl AsRef<[u8]>,
        encoded_args: impl AsRef<[u8]>,
    ) -> PendingCtor<(), Constructor, E> {
        PendingCtor::new(
            self.env.clone(),
            code_id,
            salt.as_ref().to_vec(),
            encoded_args.as_ref().to_vec(),
        )
    }
}
pub struct OnlyVaraEthProgram;

impl Identifiable for OnlyVaraEthProgram {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for OnlyVaraEthProgram {
    const ENTRY_ID: u16 = 0;
}

impl ServiceCall for OnlyVaraEthProgram {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = sails_rs::prelude::Vec<u8>;

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        let selector = solidity::selector("_onlyVaraEthProgram()");
        [selector.as_slice(), value.as_slice()].concat()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(payload.as_ref().to_vec())
    }
}

impl<E: GearEnv> TestContractCallerClient<E> {
    pub const _ONLY_VARA_ETH_PROGRAM_SIGNATURE: &'static str = "_onlyVaraEthProgram()";

    pub fn _only_vara_eth_program(
        &self,
        encoded_args: impl AsRef<[u8]>,
    ) -> PendingCall<OnlyVaraEthProgram, E> {
        PendingCall::<OnlyVaraEthProgram, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            encoded_args.as_ref().to_vec(),
        )
    }
}
pub struct ReplyOnCreatePrg;

impl Identifiable for ReplyOnCreatePrg {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for ReplyOnCreatePrg {
    const ENTRY_ID: u16 = 1;
}

impl ServiceCall for ReplyOnCreatePrg {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = sails_rs::prelude::Vec<u8>;

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        let selector = solidity::selector("replyOn_createPrg(bytes32)");
        [selector.as_slice(), value.as_slice()].concat()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(payload.as_ref().to_vec())
    }
}

impl<E: GearEnv> TestContractCallerClient<E> {
    pub const REPLY_ON_CREATE_PRG_SIGNATURE: &'static str = "replyOn_createPrg(bytes32)";

    pub fn reply_on_create_prg(
        &self,
        encoded_args: impl AsRef<[u8]>,
    ) -> PendingCall<ReplyOnCreatePrg, E> {
        PendingCall::<ReplyOnCreatePrg, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            encoded_args.as_ref().to_vec(),
        )
    }
}
pub struct ReplyOnSvc1DoThis;

impl Identifiable for ReplyOnSvc1DoThis {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for ReplyOnSvc1DoThis {
    const ENTRY_ID: u16 = 2;
}

impl ServiceCall for ReplyOnSvc1DoThis {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = sails_rs::prelude::Vec<u8>;

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        let selector = solidity::selector("replyOn_svc1DoThis(bytes32,uint32)");
        [selector.as_slice(), value.as_slice()].concat()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(payload.as_ref().to_vec())
    }
}

impl<E: GearEnv> TestContractCallerClient<E> {
    pub const REPLY_ON_SVC_1_DO_THIS_SIGNATURE: &'static str = "replyOn_svc1DoThis(bytes32,uint32)";

    pub fn reply_on_svc_1_do_this(
        &self,
        encoded_args: impl AsRef<[u8]>,
    ) -> PendingCall<ReplyOnSvc1DoThis, E> {
        PendingCall::<ReplyOnSvc1DoThis, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            encoded_args.as_ref().to_vec(),
        )
    }
}
pub struct OnErrorReply;

impl Identifiable for OnErrorReply {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for OnErrorReply {
    const ENTRY_ID: u16 = 3;
}

impl ServiceCall for OnErrorReply {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = sails_rs::prelude::Vec<u8>;

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        let selector = solidity::selector("onErrorReply(bytes32,bytes,bytes4)");
        [selector.as_slice(), value.as_slice()].concat()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(payload.as_ref().to_vec())
    }
}

impl<E: GearEnv> TestContractCallerClient<E> {
    pub const ON_ERROR_REPLY_SIGNATURE: &'static str = "onErrorReply(bytes32,bytes,bytes4)";

    pub fn on_error_reply(&self, encoded_args: impl AsRef<[u8]>) -> PendingCall<OnErrorReply, E> {
        PendingCall::<OnErrorReply, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            encoded_args.as_ref().to_vec(),
        )
    }
}
