rs/sol-client-gen/tests/snapshots/generator__multiple_services.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 28
expression: gen_client(idl)
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use sails_rs::alloy_sol_types;
#[allow(unused_imports)]
use sails_rs::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use sails_rs::solidity;
use sails_rs::{client::*, collections::*, prelude::*};

pub mod multiple {
    use super::*;

    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct MyParam {
        pub value: u32,
    }

    pub trait Multiple {
        type Env: sails_rs::client::GearEnv;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> sails_rs::client::PendingCall<io::DoThat, Self::Env>;
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct MultipleImpl;

    impl sails_rs::client::Identifiable for MultipleImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([2, 24, 22, 148, 109, 93, 75, 194]);
    }

    impl<E: sails_rs::client::GearEnv> Multiple for sails_rs::client::Service<MultipleImpl, E> {
        type Env = E;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> sails_rs::client::PendingCall<io::DoThat, Self::Env> {
            self.pending_call((p1,))
        }
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            DoThat (p1: (u8, u32, )) -> u8,
            0,
            <super::MultipleImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "multiple",
            "DoThat"
        );
        io_struct_sol_impl!(
            DoThis (p1: u32, p2: super::MyParam) -> u16,
            1,
            <super::MultipleImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "multiple",
            "DoThis"
        );
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub Multiple {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl multiple::Multiple for Multiple {
                type Env = sails_rs::client::GstdEnv;
                fn do_that (&mut self, p1: (u8, u32, )) -> sails_rs::client::PendingCall<multiple::io::DoThat, sails_rs::client::GstdEnv>;fn do_this (&mut self, p1: u32, p2: MyParam) -> sails_rs::client::PendingCall<multiple::io::DoThis, sails_rs::client::GstdEnv>;
            }
        }
    }
}

pub mod named {
    use super::*;

    pub trait Named {
        type Env: sails_rs::client::GearEnv;
        fn that(&self, p1: u32) -> sails_rs::client::PendingCall<io::That, Self::Env>;
    }

    pub struct NamedImpl;

    impl sails_rs::client::Identifiable for NamedImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([81, 188, 228, 30, 50, 153, 227, 193]);
    }

    impl<E: sails_rs::client::GearEnv> Named for sails_rs::client::Service<NamedImpl, E> {
        type Env = E;
        fn that(&self, p1: u32) -> sails_rs::client::PendingCall<io::That, Self::Env> {
            self.pending_call((p1,))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            That (p1: u32) -> String,
            0,
            <super::NamedImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "named",
            "That"
        );
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub Named {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl named::Named for Named {
                type Env = sails_rs::client::GstdEnv;
                fn that (&self, p1: u32) -> sails_rs::client::PendingCall<named::io::That, sails_rs::client::GstdEnv>;
            }
        }
    }
}
