rs/sol-client-gen/tests/snapshots/generator__nonzero_works.snap
---
source: rs/client-gen/tests/generator.rs
expression: "gen_client(idl, \"NonZeroParams\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
use sails_rs::{client::*, collections::*, prelude::*};
pub struct NonZeroParamsProgram;

impl sails_rs::client::Program for NonZeroParamsProgram {}

pub trait NonZeroParams {
    type Env: sails_rs::client::GearEnv;
    fn non_zero_params(
        &self,
    ) -> sails_rs::client::Service<non_zero_params::NonZeroParamsImpl, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> NonZeroParams
    for sails_rs::client::Actor<NonZeroParamsProgram, E>
{
    type Env = E;
    fn non_zero_params(
        &self,
    ) -> sails_rs::client::Service<non_zero_params::NonZeroParamsImpl, Self::Env> {
        self.service(stringify!(NonZeroParams))
    }
}

pub mod non_zero_params {
    use super::*;
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct MyParam {
        pub f1: U256,
        pub f2: Vec<u8>,
        pub f3: Option<(U64, U256)>,
    }
    pub trait NonZeroParams {
        type Env: sails_rs::client::GearEnv;
        fn do_this(
            &mut self,
            p1: U256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct NonZeroParamsImpl;

    impl<E: sails_rs::client::GearEnv> NonZeroParams
        for sails_rs::client::Service<NonZeroParamsImpl, E>
    {
        type Env = E;
        fn do_this(
            &mut self,
            p1: U256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        sails_rs::io_struct_impl!(DoThis (p1: U256, p2: super::MyParam) -> super::U64);
    }
}

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
pub mod mockall {
    use super::*;
    use sails_rs::mockall::*;
    mock! { pub NonZeroParams {} #[allow(refining_impl_trait)] #[allow(clippy::type_complexity)] impl non_zero_params::NonZeroParams for NonZeroParams { type Env = sails_rs::client::GstdEnv; fn do_this (&mut self, p1: U256, p2: MyParam) -> sails_rs::client::PendingCall<non_zero_params::io::DoThis, sails_rs::client::GstdEnv>; } }
}
