rs/sol-client-gen/tests/snapshots/generator__rmrk_works.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 35
expression: gen_client(IDL)
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use sails_rs::alloy_sol_types;
#[allow(unused_imports)]
use sails_rs::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use sails_rs::solidity;
use sails_rs::{client::*, collections::*, prelude::*};
pub struct RmrkCatalogProgram;

impl RmrkCatalogProgram {
    pub const ROUTE_ID_RMRK_CATALOG_SERVICE: u8 = 1;
}

impl sails_rs::client::Program for RmrkCatalogProgram {}

pub trait RmrkCatalog {
    type Env: sails_rs::client::GearEnv;
    fn rmrk_catalog_service(
        &self,
    ) -> sails_rs::client::Service<rmrk_catalog_service::RmrkCatalogServiceImpl, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> RmrkCatalog for sails_rs::client::Actor<RmrkCatalogProgram, E> {
    type Env = E;
    fn rmrk_catalog_service(
        &self,
    ) -> sails_rs::client::Service<rmrk_catalog_service::RmrkCatalogServiceImpl, Self::Env> {
        self.service(RmrkCatalogProgram::ROUTE_ID_RMRK_CATALOG_SERVICE)
    }
}
pub trait RmrkCatalogCtors {
    type Env: sails_rs::client::GearEnv;
    #[allow(clippy::new_ret_no_self)]
    #[allow(clippy::wrong_self_convention)]
    fn new(self) -> sails_rs::client::PendingCtor<RmrkCatalogProgram, io::New, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> RmrkCatalogCtors
    for sails_rs::client::Deployment<RmrkCatalogProgram, E>
{
    type Env = E;
    fn new(self) -> sails_rs::client::PendingCtor<RmrkCatalogProgram, io::New, Self::Env> {
        self.pending_ctor(())
    }
}

pub mod io {
    use super::*;
    io_struct_sol_impl!(New () -> (), 0, sails_rs::meta::InterfaceId::zero(), "", "new");
}

pub mod rmrk_catalog_service {
    use super::*;

    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum Error {
        PartIdCantBeZero,
        BadConfig,
        PartAlreadyExists,
        ZeroLengthPassed,
        PartDoesNotExist,
        WrongPartFormat,
        NotAllowedToCall,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum Part {
        Fixed(FixedPart),
        Slot(SlotPart),
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct FixedPart {
        /// An optional zIndex of base part layer.
        /// specifies the stack order of an element.
        /// An element with greater stack order is always in front of an element with a lower stack order.
        pub z: Option<u32>,
        /// The metadata URI of the part.
        pub metadata_uri: String,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct SlotPart {
        /// Array of whitelisted collections that can be equipped in the given slot. Used with slot parts only.
        pub equippable: Vec<ActorId>,
        /// An optional zIndex of base part layer.
        /// specifies the stack order of an element.
        pub z: Option<u32>,
        /// The metadata URI of the part.
        pub metadata_uri: String,
    }

    pub trait RmrkCatalogService {
        type Env: sails_rs::client::GearEnv;
        fn add_equippables(
            &mut self,
            part_id: u32,
            collection_ids: Vec<ActorId>,
        ) -> sails_rs::client::PendingCall<io::AddEquippables, Self::Env>;
        fn add_parts(
            &mut self,
            parts: Vec<(u32, Part)>,
        ) -> sails_rs::client::PendingCall<io::AddParts, Self::Env>;
        fn equippable(
            &self,
            part_id: u32,
            collection_id: ActorId,
        ) -> sails_rs::client::PendingCall<io::Equippable, Self::Env>;
        fn part(&self, part_id: u32) -> sails_rs::client::PendingCall<io::Part, Self::Env>;
        fn remove_equippable(
            &mut self,
            part_id: u32,
            collection_id: ActorId,
        ) -> sails_rs::client::PendingCall<io::RemoveEquippable, Self::Env>;
        fn remove_parts(
            &mut self,
            part_ids: Vec<u32>,
        ) -> sails_rs::client::PendingCall<io::RemoveParts, Self::Env>;
        fn reset_equippables(
            &mut self,
            part_id: u32,
        ) -> sails_rs::client::PendingCall<io::ResetEquippables, Self::Env>;
        fn set_equippables_to_all(
            &mut self,
            part_id: u32,
        ) -> sails_rs::client::PendingCall<io::SetEquippablesToAll, Self::Env>;
    }

    pub struct RmrkCatalogServiceImpl;

    impl sails_rs::client::Identifiable for RmrkCatalogServiceImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([184, 16, 165, 65, 171, 93, 83, 137]);
    }

    impl<E: sails_rs::client::GearEnv> RmrkCatalogService
        for sails_rs::client::Service<RmrkCatalogServiceImpl, E>
    {
        type Env = E;
        fn add_equippables(
            &mut self,
            part_id: u32,
            collection_ids: Vec<ActorId>,
        ) -> sails_rs::client::PendingCall<io::AddEquippables, Self::Env> {
            self.pending_call((part_id, collection_ids))
        }
        fn add_parts(
            &mut self,
            parts: Vec<(u32, Part)>,
        ) -> sails_rs::client::PendingCall<io::AddParts, Self::Env> {
            self.pending_call((parts,))
        }
        fn equippable(
            &self,
            part_id: u32,
            collection_id: ActorId,
        ) -> sails_rs::client::PendingCall<io::Equippable, Self::Env> {
            self.pending_call((part_id, collection_id))
        }
        fn part(&self, part_id: u32) -> sails_rs::client::PendingCall<io::Part, Self::Env> {
            self.pending_call((part_id,))
        }
        fn remove_equippable(
            &mut self,
            part_id: u32,
            collection_id: ActorId,
        ) -> sails_rs::client::PendingCall<io::RemoveEquippable, Self::Env> {
            self.pending_call((part_id, collection_id))
        }
        fn remove_parts(
            &mut self,
            part_ids: Vec<u32>,
        ) -> sails_rs::client::PendingCall<io::RemoveParts, Self::Env> {
            self.pending_call((part_ids,))
        }
        fn reset_equippables(
            &mut self,
            part_id: u32,
        ) -> sails_rs::client::PendingCall<io::ResetEquippables, Self::Env> {
            self.pending_call((part_id,))
        }
        fn set_equippables_to_all(
            &mut self,
            part_id: u32,
        ) -> sails_rs::client::PendingCall<io::SetEquippablesToAll, Self::Env> {
            self.pending_call((part_id,))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            AddEquippables (part_id: u32, collection_ids: Vec<ActorId>) -> super::Result<(u32, Vec<ActorId>, ), super::Error, >,
            0,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "AddEquippables"
        );
        io_struct_sol_impl!(
            AddParts (parts: Vec<(u32, super::Part, )>) -> super::Result<Vec<(u32, super::Part, )>, super::Error, >,
            1,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "AddParts"
        );
        io_struct_sol_impl!(
            Equippable (part_id: u32, collection_id: ActorId) -> super::Result<bool, super::Error, >,
            2,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "Equippable"
        );
        io_struct_sol_impl!(
            Part (part_id: u32) -> super::Option<super::Part, >,
            3,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "Part"
        );
        io_struct_sol_impl!(
            RemoveEquippable (part_id: u32, collection_id: ActorId) -> super::Result<(u32, ActorId, ), super::Error, >,
            4,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "RemoveEquippable"
        );
        io_struct_sol_impl!(
            RemoveParts (part_ids: Vec<u32>) -> super::Result<Vec<u32>, super::Error, >,
            5,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "RemoveParts"
        );
        io_struct_sol_impl!(
            ResetEquippables (part_id: u32) -> super::Result<(), super::Error, >,
            6,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "ResetEquippables"
        );
        io_struct_sol_impl!(
            SetEquippablesToAll (part_id: u32) -> super::Result<(), super::Error, >,
            7,
            <super::RmrkCatalogServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "rmrkCatalogService",
            "SetEquippablesToAll"
        );
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub RmrkCatalogService {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl rmrk_catalog_service::RmrkCatalogService for RmrkCatalogService {
                type Env = sails_rs::client::GstdEnv;
                fn add_equippables (&mut self, part_id: u32, collection_ids: Vec<ActorId>) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::AddEquippables, sails_rs::client::GstdEnv>;fn add_parts (&mut self, parts: Vec<(u32, Part, )>) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::AddParts, sails_rs::client::GstdEnv>;fn equippable (&self, part_id: u32, collection_id: ActorId) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::Equippable, sails_rs::client::GstdEnv>;fn part (&self, part_id: u32) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::Part, sails_rs::client::GstdEnv>;fn remove_equippable (&mut self, part_id: u32, collection_id: ActorId) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::RemoveEquippable, sails_rs::client::GstdEnv>;fn remove_parts (&mut self, part_ids: Vec<u32>) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::RemoveParts, sails_rs::client::GstdEnv>;fn reset_equippables (&mut self, part_id: u32) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::ResetEquippables, sails_rs::client::GstdEnv>;fn set_equippables_to_all (&mut self, part_id: u32) -> sails_rs::client::PendingCall<rmrk_catalog_service::io::SetEquippablesToAll, sails_rs::client::GstdEnv>;
            }
        }
    }
}
